<resources>
    <string name="app_name">QuoterMvp</string>

    <string name="title_activity_maps">Map</string>
    <string name="label_address">Address:</string>
    <string name="dialog_title_address_input">Enter address</string>

    <string name="tag_event_fired">Event fired</string>
    <string name="tag_result_activity">Activity result</string>
    <string name="tag_event_map_marker_trigger">Map marker addition event trigger captured</string>
    <string name="tag_event_geocoding_request">Address entered for geocoding request</string>
    <string name="tag_event_map_report_ready">Map reports ready for work</string>
    <string name="tag_event_created_placed_marker">Created and placed new marker</string>
    <string name="tag_event_estate_details_query">Estate details queried</string>
    <string name="tag_event_estate_details_update">Estate details updated</string>
    <string name="tag_result_contact_retrieved">Contact retrieved</string>
    <string name="label_geographic_information">Geographic information</string>
    <string name="label_latitude">Latitude</string>
    <string name="label_longitude">Longitude</string>
    <string name="label_street">Street</string>
    <string name="label_city">City</string>
    <string name="label_name">Name</string>
    <string name="label_owner_information">Owner information</string>
    <string name="filler_default_city">Mar del Plata</string>
    <string name="desc_frontal_view">Frontal view</string>
    <string name="title_frontal_view">Frontal view</string>
    <string name="notice_no_rooms">No rooms created. Push the button to add one.</string>
    <string name="tag_event_rooms_list_query">Rooms list queried</string>
    <string name="hint_no_rooms">No rooms have been yet created.\n\nTap the button to add one.</string>
    <string name="title_room_view">Room view</string>
    <string name="label_surface">Surface</string>
    <string name="title_details">Details</string>
    <string name="label_comments">Comments</string>
</resources>
