<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cardFrontView"
        style="@style/style_card_view"
        app:cardCornerRadius="@dimen/spacing_half">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/titleFrontView"
                style="@style/style_text_card_title"
                android:text="@string/title_frontal_view"/>

            <ImageView
                android:id="@+id/imgFrontView"
                android:layout_margin="@dimen/spacing_normal"
                android:layout_width="240dp"
                android:layout_height="180dp"
                android:contentDescription="@string/desc_frontal_view"
                android:src="@android:drawable/ic_menu_camera"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardLocation"
        style="@style/style_card_view"
        app:cardCornerRadius="@dimen/spacing_half">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleLocation"
                style="@style/style_text_card_title"
                android:text="@string/label_geographic_information"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_half"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/width_field_label"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_half"
                    android:text="@string/label_latitude"/>

                <TextView
                    android:id="@+id/txtLatitude"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_half"
                    android:layout_weight="1"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_half"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/width_field_label"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_half"
                    android:text="@string/label_longitude"/>

                <TextView
                    android:id="@+id/txtLongitude"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_half"
                    android:layout_weight="1"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_half"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/width_field_label"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_half"
                    android:text="@string/label_city"/>

                <TextView
                    android:id="@+id/txtCity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_half"
                    android:layout_weight="1"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_half"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/width_field_label"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_half"
                    android:text="@string/label_street"/>

                <TextView
                    android:id="@+id/txtStreet"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_half"
                    android:layout_weight="1"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardOwner"
        style="@style/style_card_view"
        app:cardCornerRadius="@dimen/spacing_half">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleOwner"
                style="@style/style_text_card_title"
                android:text="@string/label_owner_information"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_half"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/width_field_label"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_half"
                    android:text="@string/label_name"/>

                <TextView
                    android:id="@+id/txtOwnerName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_half"
                    android:layout_weight="1"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>